fix: whitespace color

--- a/src/client/DocumentEditor.css
+++ b/src/client/DocumentEditor.css
@@ -21,6 +21,6 @@
 }
 
 .cm-whitespace {
-  color: gray;
+  color: var(--editor-whitespace-color);
   word-break: break-all;
 }
